[package]
name = "gtos_core"
version = "0.1.0"
edition = "2021"
authors = ["TysonKenobi"]
description = "GTOS Core Operating System Architecture & Monolithic Conductor"
autotests = false

[profile.release]
opt-level = 3           # Maximize high-speed execution optimization
lto = true              # Enable Link-Time Optimization across layers
codegen-units = 1       # Reduce code generation units to optimize binary density
panic = "abort"         # Force immediate execution abort on violation to maintain secure states

[lib]
name = "gtos_core"
path = "core/lib.rs"    

# =========================================================================
# SYSTEM INTEGRATION UTILITIES & MAINTENANCE APPARATUSES
# =========================================================================
# Packages isolated layer tests as parallel, standalone application binaries

[[bin]]
name = "gtos-sysmon-l1"
path = "tests/gtos_layer1_harness.rs"
test = false

[[bin]]
name = "gtos-sysmon-l2"
path = "tests/gtos_layer2_harness.rs"
test = false

[[bin]]
name = "gtos-sysmon-l3"
path = "tests/gtos_layer3_harness.rs"
test = false

[[bin]]
name = "gtos-sysmon-l4"
path = "tests/gtos_layer4_harness.rs"
test = false

[[bin]]
name = "gtos-conductor-test"
path = "tests/gtos_conductor_harness.rs"
test = false

# =========================================================================
# PHASE 10 TARGET V1 CORE SYSTEMS (THE CHROME CANVAS)
# =========================================================================
# These define the baseline operational tools to boot the V1 platform.
# They modulate chaotic inputs into clean, unfragmented 517-byte chords.

# [[bin]]
# name = "gtos-modulator-core"
# path = "apps/gtos_modulator_core.rs"
# V1 Core Ingestor: Modulates raw byte streams into unallocated 517-byte chords.

# [[bin]]
# name = "gtos-core-shell"
# path = "apps/gtos_core_shell.rs"
# V1 Core Dashboard: Master zero-allocation diagnostic steering wheel.

# =========================================================================
# FUTURE SENSUAL & HARDWARE ACCELERATION PLUGINS (LOAD-YOUR-OWN EXTENSIONS)
# =========================================================================
# Future plug-and-play tracking slots for the Instrument Ingestion Framework.

# [[bin]]
# name = "gtos-instrument-acoustic"
# path = "apps/gtos_instrument_acoustic.rs"
# Ingests Speaker/Mic/Voice frequencies directly into 1/φ² compression voids.

# [[bin]]
# name = "gtos-instrument-vision"
# path = "apps/gtos_instrument_vision.rs"
# Maps VR/Spatial camera coordinates instantly into 24-byte FFI payloads.

# [[bin]]
# name = "gtos-instrument-biometrics"
# path = "apps/gtos_bio_metrics.rs"
# Maps secure fingerprint, iris, and pulse invariants directly to geometric chords.

# [[bin]]
# name = "gtos-instrument-robotics"
# path = "apps/gtos_robot_interface.rs"
# Routes 3-axis physical voltage metrics to external actuation hardware lanes.

# [[bin]]
# name = "gtos-instrument-intelligence"
# path = "apps/gtos_ai_bridge_universal.rs"
# Strips LLM model weights of host bloat, mapping parameters directly to silicon cell arrays.

# [[bin]]
# name = "gtos-instrument-finance"
# path = "apps/gtos_financial_fix.rs"
# Translates stock/blockchain message packets straight into geometric chords.

[dependencies]
# Natively empty. Proves the zero-overhead/zero-dependency footprint.
